[tool.poetry]
name = "extend"
version = "0.1.0"
description = ""
authors = ["Florian Rämisch <raemisch@ub.uni-leipzig.de>"]

[tool.poetry.plugins."plughost.plugin"]
"extend" = "extend.extend:print_name_pre_mod"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
