[tool.poetry]
name = "plughost"
version = "0.1.0"
description = ""
authors = ["Florian Rämisch <raemisch@ub.uni-leipzig.de>"]

[tool.poetry.scripts]
plughost = 'plughost.plughost:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
